--- a/environment.yml
+++ b/environment.yml
@@ -4,3 +4,7 @@ channels:
 dependencies:
   - pandas  # For data manipulation
   - altair  # For data visualization
+  - pandas
+  - ipywidgets
+  - jupyterlab>=3.1
+  - voila>=0.2.11
