--- a/environment.yml
+++ b/environment.yml
@@ -6,5 +6,5 @@ dependencies:
   - altair  # For data visualization
   - pandas
   - ipywidgets
-  - jupyterlab>=3.1
-  - voila>=0.2.11
+  - jupyterlab
+  - voila
